Get tenant via header and set to get product payload
