# docs/swagger.json
@@ -50,12 +50,6 @@
                     },
                     {
                         "type": "string",
-                        "description": "tenant product",
-                        "name": "tenant",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "description": "order by",
                         "name": "orderby",
                         "in": "query"
